<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:columnCount="1"
    android:orientation="vertical"
   android:padding="16dp" >

    <TextView
        android:id="@+id/home_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/home_title"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/White" />

    <TextView
        android:id="@+id/home_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/home_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/home_subtitle"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/home_startSearch_btn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/home_subtitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@color/Gold"
        android:text="@string/home_startSearch_btn"
        android:textColor="@color/Black"
        android:textSize="16sp" />
    <!--  
    <Button
        android:id="@+id/view_review_btn"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_below="@id/home_startSearch_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="@color/Gold"
        android:text="@string/home_startSearch_btn"
        android:textColor="@color/Black"
        android:textSize="16sp" />
	-->
</RelativeLayout>